<resources>
    <string name="app_name">Srijan 20</string>
    <string name="srijan_circles">Srijan circles</string>
    <string name="triangle_above_srijan_circle">Triangle above srijan circle</string>
    <string name="fetsu_presents_srijan_20">Fetsu presents srijan 20</string>
    <string name="jadavpur_university_logo">Jadavpur University logo</string>
    <string name="ccusl_logo">Codeclub jusl logo</string>
    <string name="ju_games_society_logo">JU Games society logo</string>
    <string name="ju_science_club_logo">JU Science club logo</string>
    <string name="main_page_background_circles">Main page background circles</string>
    <string name="main_page_background_top">Main page background top</string>
    <string name="main_page_background_bottom">Main page background bottom</string>
    <string name="main_page_circles_top_right">Main page circles top right</string>
    <string name="main_page_sponsor">Main page sponsor</string>
    <string name="main_page_gallery">Main page gallery</string>
    <string name="main_page_ambassador">Main page ambassador</string>
    <string name="main_page_about">About</string>
    <string name="main_page_events">Events</string>
    <string name="main_page_facebook">Facebook icon</string>
    <string name="main_page_instagram">Instagram icon</string>
    <string name="main_page_phone">Phone icon</string>
    <string name="main_page_mail">Mail icon</string>
    <string name="main_page_youtube">Youtube icon</string>
    <string name="main_page_gallery_written">Gallery written</string>
    <string name="main_page_timer_background">Timer background</string>
    <string name="main_page_profile_circle">Profile Circle</string>
    <string name="event_black_overlay">Event black overlay</string>
    <string name="event_icon_background">Event icon background</string>
    <string name="scan_qr_code">Scan qr code</string>
    <string name="campus_ambassador_poster">Campus ambassador poster</string>
    <string name="campus_ambassador">Campus ambassador</string>
    <string name="app_developed_by">App Developed By:</string>
    <string name="poster">poster</string>
    <string name="rules">RULES</string>
    <string name="contact">CONTACT</string>
    <string name="register">Register</string>
    <string name="gallery">Gallery</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name (eg. Rishav Agarwal)</string>
    <string name="email">Email (eg. rishavcoder@gmail.com)</string>
    <string name="college">College (eg. Jadavpur University)</string>
    <string name="degree">Degree (eg. B E/B Tech)</string>
    <string name="course">Course (eg. Information Technology)</string>
    <string name="year">Year (eg. 4th year)</string>
    <string name="srijan">srijan \'20</string>
    <string name="you_can_not_change_your_details_later_please_fill_carefully">You can not change your details later. Please fill carefully.</string>
    <string name="logout">Logout</string>
    <string name="event_registration">Event registration</string>
    <string name="event_name">Event name</string>
    <string name="team_name">Team name</string>
    <string name="team_lead_email">Team lead email</string>
    <string name="team_member_1">Team member 1 email</string>
    <string name="team_member_2">Team member 2 email</string>
    <string name="team_member_3">Team member 3 email</string>
    <string name="team_lead_contact_number">Team lead contact number</string>
    <string name="registered">Registered</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="sponsors">Sponsors</string>
    <string name="sponsor_poster">Sponsor poster</string>
    <string name="to_sponsor_contact_us_at_srijan_jduniv_gmail_com_or_soumyadip_maity_9333324765">To sponsor, contact us at srijan.jduniv@gmail.com or Soumyadip Maity(9333324765)</string>
    <string name="coming_soon">Coming soon</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">2489104001207526</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2489104001207526</string>
    <string name="srijan_merchandise">Srijan merchandise</string>
    <string name="buy_our_tshirt_now">Buy our tshirt now!</string>
    <string name="looking_for_workshops">Looking for workshops and other events?\nClick here
		to register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
