<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/mp_background"
	tools:context=".activities.MainPage">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/main_page_background_circles"
		android:scaleX="1.2"
		android:scaleY="1.2"
		android:src="@drawable/mp_circles_center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_background_top"
		android:src="@drawable/mp_background_top"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/iv_tr_circles"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_circles_top_right"
		android:src="@drawable/mp_circles_upper_right"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/iv_tr_tri"
		android:layout_width="210dp"
		android:layout_height="160dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/triangle_above_srijan_circle"
		android:src="@drawable/triangle_upper_above_circle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/srijan"
		android:layout_width="210dp"
		android:layout_height="120dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/fetsu_presents_srijan_20"
		android:scaleX="0.8"
		android:scaleY="0.8"
		android:src="@drawable/srijan20_upper"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/iv_profile"
		android:layout_width="100dp"
		android:layout_height="120dp"
		android:layout_marginTop="24dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_profile_circle"
		android:scaleY="1.2"
		android:src="@drawable/avengerpro"
		app:layout_constraintEnd_toStartOf="@id/iv_tr_circles"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/timer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="24dp"
		android:background="@drawable/timer_background"
		android:contentDescription="@string/main_page_timer_background"
		android:padding="30dp"
		android:scaleY="0.35"
		android:shadowColor="#f99245"
		android:shadowDx="-3"
		android:shadowDy="-3"
		android:shadowRadius="1"
		android:textColor="#ffffff"
		android:textSize="35sp"
		app:layout_constraintBottom_toTopOf="@+id/iv_about"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/iv_tr_tri" />

	<ImageView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_background_bottom"
		android:src="@drawable/mp_back_bottom"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<ImageView
		android:id="@+id/iv_sponsor"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_sponsor"
		android:src="@drawable/sponsorswhite"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/iv_gallery"
		app:layout_constraintStart_toStartOf="parent" />

	<ImageView
		android:id="@+id/iv_gallery"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_gallery"
		android:src="@drawable/gallerywhite"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/iv_sponsor"
		app:layout_constraintStart_toEndOf="@id/iv_ca" />

	<ImageView
		android:id="@+id/iv_ca"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_ambassador"
		android:src="@drawable/campusambassador"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/iv_gallery" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/options1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.62" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/options2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.3" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/options3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.87" />

	<ImageView
		android:id="@+id/iv_about"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_about"
		android:scaleType="fitStart"
		android:scaleX="1.4"
		android:scaleY="1.3"
		android:src="@drawable/about"
		app:layout_constraintBottom_toTopOf="@+id/options2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/options1" />

	<ImageView
		android:id="@+id/iv_events"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_events"
		android:scaleType="fitStart"
		android:scaleX="1.3"
		android:scaleY="1.3"
		android:src="@drawable/events"
		app:layout_constraintBottom_toTopOf="@+id/options3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/options2" />

	<ImageView
		android:id="@+id/iv_scan_qr"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_marginTop="4dp"
		android:background="@drawable/mp_circles_center"
		android:contentDescription="@string/scan_qr_code"
		android:src="@drawable/srijan_qr"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/iv_events" />

</androidx.constraintlayout.widget.ConstraintLayout>