<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/mp_background"
	tools:context=".activities.Events">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:contentDescription="@string/srijan_circles"
		android:scaleX="1.2"
		android:scaleY="1.2"
		android:src="@drawable/mp_circles_center"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/event_black_overlay"
		android:scaleY="1.2"
		android:scaleX="1.3"
		android:src="@drawable/event_black_overlay"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/main_page_events"
		android:scaleX="1.4"
		android:scaleY="1.3"
		android:src="@drawable/about"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.15" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="1" />

	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="@+id/guideline4"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline2">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.youtube.player.YouTubePlayerView
				android:id="@+id/srijanVid"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="2dp"
				android:background="#f99245" />

			<TextView
				android:id="@+id/srijanText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/srijanVid"
				android:layout_marginStart="10dp"
				android:fontFamily="@font/kg"
				android:padding="8dp"
				android:scaleX="1"
				android:scaleY="1"
				android:textColor="#ffffff"
				android:textSize="26sp" />

			<LinearLayout
				android:id="@+id/clubsInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/srijanText"
				android:layout_margin="8dp"
				android:gravity="center">

				<ImageView
					android:id="@+id/JU_official"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_margin="8dp"
					android:background="@android:color/white"
					android:contentDescription="@string/jadavpur_university_logo"
					android:src="@drawable/ju_logo" />

				<ImageView
					android:id="@+id/CC_official"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_margin="8dp"
					android:background="@android:color/white"
					android:contentDescription="@string/ccusl_logo"
					android:src="@drawable/ccjusl_logo" />

				<ImageView
					android:id="@+id/GS_official"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_margin="8dp"
					android:background="@android:color/white"
					android:contentDescription="@string/ju_games_society_logo"
					android:src="@drawable/ju_game_society_logo" />

				<ImageView
					android:id="@+id/SC_official"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_margin="8dp"
					android:background="@android:color/white"
					android:contentDescription="@string/ju_science_club_logo"
					android:src="@drawable/jusc_logo" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/creatorsInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/clubsInfo"
				android:layout_margin="8dp"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="25dp"
					android:layout_marginBottom="15dp"
					android:fontFamily="@font/payback"
					android:shadowColor="#f99245"
					android:shadowDx="-2"
					android:shadowDy="-2"
					android:shadowRadius="1"
					android:text="@string/app_developed_by"
					android:textColor="#ffffff"
					android:textSize="28sp" />

				<LinearLayout
					android:id="@+id/creatorsList"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:divider="@null"
					android:dividerHeight="0dp"
					android:orientation="vertical" />
			</LinearLayout>

		</RelativeLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>